[project]
name = "allseer"
version = "0.1.0"
description = "An read-only, AI-powered diagnostics assistant for Kubernetes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "mcp>=1.3.0",
    "kubernetes>=32.0.1",
    "mcp[cli]>=1.3.0",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "prompt-toolkit>=3.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = [
    # isort
    "I",
]
